--- a/BenchBuddy.cmp
+++ b/BenchBuddy.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by CvPcb (2013-03-19 BZR 4004)-stable date = 10/22/2013 8:45:16 PM
+Cmp-Mod V01 Created by CvPcb (2013-03-19 BZR 4004)-stable date = 10/22/2013 9:22:58 PM
 
 BeginCmp
 TimeStamp = /522FEA6C/5251D4C8;
@@ -38,14 +38,14 @@ EndCmp
 BeginCmp
 TimeStamp = /522FEB12/523F5D89;
 Reference = C5;
-ValeurCmp = C;
+ValeurCmp = 1U;
 IdModule  = SM0805;
 EndCmp
 
 BeginCmp
 TimeStamp = /522FEB12/523F5DA2;
 Reference = C6;
-ValeurCmp = C;
+ValeurCmp = 1U;
 IdModule  = SM0805;
 EndCmp
 
@@ -213,8 +213,8 @@ EndCmp
 BeginCmp
 TimeStamp = /522FEB12/523F5DF0;
 Reference = D5;
-ValeurCmp = DIODESCH;
-IdModule  = ;
+ValeurCmp = B0540WS-7;
+IdModule  = SOD-323;
 EndCmp
 
 BeginCmp
@@ -304,8 +304,8 @@ EndCmp
 BeginCmp
 TimeStamp = /522FEB12/523F5DAA;
 Reference = L4;
-ValeurCmp = INDUCTOR;
-IdModule  = ;
+ValeurCmp = 22u;
+IdModule  = NR4012;
 EndCmp
 
 BeginCmp
@@ -486,7 +486,7 @@ EndCmp
 BeginCmp
 TimeStamp = /522FEB12/523F5E65;
 Reference = R17;
-ValeurCmp = R;
+ValeurCmp = 15;
 IdModule  = SM0805;
 EndCmp
 
